--- a/src/Saturno.Domain/Saturno.Domain.csproj
+++ b/src/Saturno.Domain/Saturno.Domain.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
